--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=mental-health-e819d.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=242651965281
 VITE_FIREBASE_APP_ID=1:242651965281:web:9ecb04bfee2e1cd028c720
 VITE_FIREBASE_MEASUREMENT_ID=G-RYCLJ3XYLZ
+VITE_YOUTUBE_API_KEY=AIzaSyCYwspO2lp9T4NL6zbli864L2prIAHjiRQ
